--- a/package.json
+++ b/package.json
@@ -1,33 +1,39 @@
 {
   "name": "45021-pink",
-  "version": "0.1.0",
-  "private": true,
+  "version": "0.0.1",
   "description": "Обучающий проект «pink» от HTML Academy",
-  "author": "Алексей Суппес",
+  "private": true,
+  "main": "Gruntfile.js",
+  "scripts": {
+    "test": "grunt test",
+    "pregosha": "npm install",
+    "gosha": "grunt gosha --force"
+  },
   "repository": {
     "type": "git",
     "url": "git://github.com/up-htmlacademy/45021-pink.git"
   },
+  "author": "Алексей Суппес",
   "bugs": {
     "url": "https://github.com/up-htmlacademy/45021-pink/issues"
   },
   "homepage": "https://github.com/up-htmlacademy/45021-pink",
   "dependencies": {
-    "grunt": "0.4.x",
-    "grunt-contrib-clean": "0.6.x",
-    "grunt-contrib-copy": "0.8.x",
-    "grunt-lintspaces": "0.7.x",
-    "husky": "0.10.x",
-    "load-grunt-tasks": "3.2.x"
+    "grunt": "^0.4.5",
+    "grunt-contrib-copy": "^0.8.0",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-less": "^1.0.1",
+    "grunt-githooks": "^0.3.1",
+    "grunt-lintspaces": "^0.6.2",
+    "grunt-sass": "^0.18.1",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-notify": "^0.4.1",
+    "load-grunt-tasks": "^3.1.0"
   },
-  "main": "Gruntfile.js",
-  "scripts": {
-    "lint": "grunt lintspaces:codestyle",
-    "test": "npm run lint",
-    "pregosha": "npm install",
-    "gosha": "grunt gosha"
-  },
-  "engines": {
-    "node": "^0.12.7"
+  "devDependencies": {
+    "grunt-contrib-less": "^1.0.1",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-notify": "^0.4.1",
+    "load-grunt-tasks": "^3.2.0"
   }
 }
