--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "load-grunt-tasks": "^3.1.0"
   },
   "devDependencies": {
+    "grunt-autoprefixer": "^3.0.3",
     "grunt-contrib-less": "^1.0.1",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-notify": "^0.4.1",
+    "grunt-postcss": "^0.6.0",
     "load-grunt-tasks": "^3.2.0"
   }
 }
