--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
   "devDependencies": {
     "grunt-contrib-watch": "^0.6.1",
     "grunt-notify": "^0.4.1",
+    "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^3.1.0",
     "load-grunt-tasks": "^3.2.0"
   }
 }
