--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "grunt-notify": "^0.4.1",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-less": "^3.0.3",
     "load-grunt-tasks": "^3.2.0"
   }
 }
